# makeresearch

./: .gitlab-ci.yml  Makefile  README.md  paper.tex  pyproject.toml  setup.cfg  slides.tex
docker/: Dockerfile.publications  Dockerfile.solver
docs/: conf.py  index.rst
env/: parameters.py  problem.py
numericals/src/: compute.py  report.py
plots/src/: control.py  g.py  parameters.py  solution.py
solver/: core.py
tables/src/: temperatures.py
