[metadata]
name = solver
description = makeresearch solver
author = Dmytro Strelnikov
author_email = dmytro.strelnikov@math.tu-chemnitz.de,
license = GPL v3
keywords = make


[options]
packages = solver
platforms = any
include_package_data = True
install_requires = 
    numpy >= 1.13.1
    sympy >= 1.8
    matplotlib >= 3.1.2
    fenics == 2019.1.0
python_requires = >= 3.6
setup_requires =
    setuptools_scm
